# learn_deep

./: .gitignore  README.md
deep_sort_cpp/: CMakeLists.txt
deep_sort_cpp/include/: bounding_box.h  detection.h  feature.h  iou.h  nn_metric.h  track.h  tracker.h
deep_sort_cpp/src/: deep_sort.cc  iou.cc  iou_test.cc  nn_metric.cc  tracker.cc
deep_sort_cpp/src/tests/: nn_metric_test.cc
process/tensorflow_builder/: .gitignore  README.md
process/test_native_library/: settings.gradle.kts
process/test_native_library/app/: build.gradle.kts
process/test_native_library/app/src/androidTest/java/com/iuantu/myapplication/: ExampleInstrumentedTest.kt
process/test_native_library/app/src/main/java/com/iuantu/myapplication/: MainActivity.kt
process/test_native_library/app/src/main/java/com/iuantu/myapplication/ui/theme/: Color.kt  Theme.kt  Type.kt
process/test_native_library/app/src/test/java/com/iuantu/myapplication/: ExampleUnitTest.kt
process/test_native_library/gradle/wrapper/: gradle-wrapper.properties
process/test_native_library/library1/: build.gradle
process/test_native_library/library1/src/androidTest/java/com/iuantu/library1/: ExampleInstrumentedTest.java
process/test_native_library/library1/src/main/cpp/: CMakeLists.txt  library1.cpp
process/test_native_library/library1/src/main/java/com/iuantu/library1/: NativeLib.java
process/test_native_library/library1/src/test/java/com/iuantu/library1/: ExampleUnitTest.java
